# Chessbot

./: CMakeLists.txt  README.md
include/: board.cpp  board.hpp
lib/: board.cpp  board.hpp  piece.cpp  piece.hpp
src/: chessbot.cpp  test.cpp
